# Vulkan-NDK-Template

./: README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndroidMain.cpp  CMakeLists.txt  CreateShaderModule.h  Util.h  ValidationLayers.h  VulkanMain.cpp  VulkanMain.h
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
